--- a/index.html
+++ b/index.html
@@ -413,10 +413,12 @@
   </form>
 </section>
 
-<section class="container px-4 mb-12 scroll-animate">
-  <div class="bg-[#1e1b4b] rounded-3xl p-8 sm:p-12 flex flex-col-reverse md:flex-row items-center gap-10 md:gap-16 lg:gap-20 shadow-lg overflow-hidden">
+<!-- SECTION FULL WIDTH DENGAN BACKGROUND -->
+<section class="bg-[#1e1b4b] py-12 scroll-animate">
+  <div class="container px-4 flex flex-col-reverse md:flex-row items-center gap-10 md:gap-16 lg:gap-20">
+    
     <!-- Teks Kiri -->
-    <div class="flex-1 max-w-xl scroll-animate text-white">
+    <div class="flex-1 max-w-xl text-white">
       <p class="text-sm text-[#FEAD6F] mb-2 font-medium uppercase tracking-wider">About Us</p>
       <h2 class="font-extrabold text-2xl sm:text-3xl lg:text-4xl leading-tight mb-6">
         <span class="block">Gilli Speedboats</span>
@@ -431,7 +433,7 @@
     </div>
 
     <!-- Gambar Kanan -->
-    <div class="relative flex-shrink-0 w-full max-w-sm md:w-64 lg:w-72 scroll-animate">
+    <div class="relative flex-shrink-0 w-full max-w-sm md:w-64 lg:w-72">
       <img alt="Blue rounded background" 
            class="absolute -top-4 -left-4 rounded-3xl w-full h-auto shadow-xl animate__animated animate__fadeInRight" 
            src="https://storage.googleapis.com/a1aa/image/26368e7b-589d-4b89-d57a-aec2ac847c0e.jpg"/>
@@ -439,9 +441,10 @@
            class="relative rounded-3xl shadow-2xl w-full h-auto animate__animated animate__fadeIn animate__delay-1s" 
            src="https://storage.googleapis.com/a1aa/image/4cb53dc9-1edf-46e7-bd95-fc64fb2c99f9.jpg"/>
     </div>
-    
+
   </div>
 </section>
+
 
 <section class="popular-routes py-8 bg-gray-50" data-aos="fade-up">
   <div class="container mx-auto px-4">
