--- a/index.html
+++ b/index.html
@@ -873,10 +873,10 @@
   </div>
 </section>
 
-<section class="bg-[#1C1A40] py-16 px-4">
+<section class="bg-[#1C1A40] py-16 px-4 scroll-animate animate__animated animate__fadeIn">
   <div class="container mx-auto max-w-4xl">
     <!-- FAQ Header -->
-    <div class="text-center mb-12">
+    <div class="text-center mb-12 scroll-animate animate__animated animate__fadeInUp">
       <h2 class="text-3xl font-bold text-white mb-3">Frequently Asked Questions</h2>
       <p class="text-[#FEAD6F] text-lg">Get quick answers to common questions about our services, and pricing.</p>
     </div>
@@ -884,7 +884,7 @@
     <!-- FAQ Items -->
     <div class="space-y-4">
       <!-- FAQ Item 1 -->
-      <div class="bg-[#323053] rounded-xl shadow-sm hover:shadow-md transition-shadow">
+      <div class="bg-[#323053] rounded-xl shadow-sm hover:shadow-md transition-shadow scroll-animate animate__animated animate__fadeInUp animate__delay-1s">
         <button class="faq-toggle w-full flex justify-between items-center p-6 text-left">
           <span class="font-medium text-white">How do I book a ticket for a Ball Speedboat?</span>
           <svg class="w-5 h-5 text-sky-600 transform transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -896,8 +896,8 @@
         </div>
       </div>
 
-      <!-- FAQ Item 2 (duplicate question in image) -->
-      <div class="bg-[#323053] rounded-xl shadow-sm hover:shadow-md transition-shadow">
+      <!-- FAQ Item 2 -->
+      <div class="bg-[#323053] rounded-xl shadow-sm hover:shadow-md transition-shadow scroll-animate animate__animated animate__fadeInUp animate__delay-2s">
         <button class="faq-toggle w-full flex justify-between items-center p-6 text-left">
           <span class="font-medium text-white">How long does it take to travel between islands using Ball Speedboat services?</span>
           <svg class="w-5 h-5 text-sky-600 transform transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -910,7 +910,7 @@
       </div>
 
       <!-- FAQ Item 3 -->
-      <div class="bg-[#323053] rounded-xl shadow-sm hover:shadow-md transition-shadow">
+      <div class="bg-[#323053] rounded-xl shadow-sm hover:shadow-md transition-shadow scroll-animate animate__animated animate__fadeInUp animate__delay-3s">
         <button class="faq-toggle w-full flex justify-between items-center p-6 text-left">
           <span class="font-medium text-white">Are there any luggage restrictions on Ball Speedboat services?</span>
           <svg class="w-5 h-5 text-sky-600 transform transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -923,7 +923,7 @@
       </div>
 
       <!-- FAQ Item 4 -->
-      <div class="bg-[#323053] rounded-xl shadow-sm hover:shadow-md transition-shadow">
+      <div class="bg-[#323053] rounded-xl shadow-sm hover:shadow-md transition-shadow scroll-animate animate__animated animate__fadeInUp animate__delay-4s">
         <button class="faq-toggle w-full flex justify-between items-center p-6 text-left">
           <span class="font-medium text-white">What safety measures are in place on Ball Speedboat services?</span>
           <svg class="w-5 h-5 text-sky-600 transform transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -936,7 +936,7 @@
       </div>
 
       <!-- FAQ Item 5 -->
-      <div class="bg-[#323053] rounded-xl shadow-sm hover:shadow-md transition-shadow">
+      <div class="bg-[#323053] rounded-xl shadow-sm hover:shadow-md transition-shadow scroll-animate animate__animated animate__fadeInUp animate__delay-5s">
         <button class="faq-toggle w-full flex justify-between items-center p-6 text-left">
           <span class="font-medium text-white">Can I cancel or change my Speedboat ticket booking?</span>
           <svg class="w-5 h-5 text-sky-600 transform transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
