--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
     <div class="blog__content grid grid-cols-1 md:grid-cols-3 gap-8 mt-8">
       <article class="blog__card bg-white shadow-lg rounded-lg overflow-hidden scroll-animate">
         <div class="blog__image relative">
-          <img src="https://giliwanders.com/fotoberita/landscape-tropical-vacation-palm-summer.jpg" alt="Tropical vacation landscape with palm trees and blue sky" class="blog__img w-full h-48 object-cover max-w-[350px] mx-auto cursor-pointer" />
+          <img src="https://giliwanders.com/fotoberita/landscape-tropical-vacation-palm-summer.jpg" alt="Tropical vacation landscape with palm trees and blue sky" class="blog__img w-full h-48 object-cover" />
         </div>
         <div class="blog__data p-4">
           <div class="flex items-center text-gray-500 mb-2">
@@ -823,7 +823,7 @@
       <!-- Second blog card -->
       <article class="blog__card bg-white shadow-lg rounded-lg overflow-hidden scroll-animate">
         <div class="blog__image relative">
-          <img src="https://giliwanders.com/fotoberita/kelingking-beach-nusa-penida-island-bali-indonesia.jpg" alt="Kelingking Beach Nusa Penida Island Bali Indonesia" class="blog__img w-full h-48 object-cover max-w-[350px] mx-auto cursor-pointer" />
+          <img src="https://giliwanders.com/fotoberita/kelingking-beach-nusa-penida-island-bali-indonesia.jpg" alt="Kelingking Beach Nusa Penida Island Bali Indonesia" class="blog__img w-full h-48 object-cover" />
         </div>
         <div class="blog__data p-4">
           <div class="flex items-center text-gray-500 mb-2">
@@ -847,7 +847,7 @@
 
       <article class="blog__card bg-white shadow-lg rounded-lg overflow-hidden scroll-animate">
         <div class="blog__image relative">
-          <img src="https://giliwanders.com/fotoberita/kelingking-beach-nusa-penida-island-bali-indonesia.jpg" alt="Kelingking Beach Nusa Penida Island Bali Indonesia" class="blog__img w-full h-48 object-cover max-w-[350px] mx-auto cursor-pointer" />
+          <img src="https://giliwanders.com/fotoberita/kelingking-beach-nusa-penida-island-bali-indonesia.jpg" alt="Kelingking Beach Nusa Penida Island Bali Indonesia" class="blog__img w-full h-48 object-cover" />
         </div>
         <div class="blog__data p-4">
           <div class="flex items-center text-gray-500 mb-2">
