--- a/blog&news.html
+++ b/blog&news.html
@@ -364,79 +364,79 @@
   </div>
   
   <div class="blog__content grid grid-cols-1 md:grid-cols-3 gap-8 mt-8">
-    <article class="blog__card bg-white shadow-lg rounded-lg overflow-hidden scroll-animate">
-      <div class="blog__image relative">
-        <img src="https://giliwanders.com/fotoberita/landscape-tropical-vacation-palm-summer.jpg" alt="Tropical vacation landscape with palm trees and blue sky" class="blog__img w-full h-48 object-cover max-w-[350px] mx-auto cursor-pointer" />
-      </div>
-      <div class="blog__data p-4">
-        <div class="flex items-center text-gray-500 mb-2">
-          <i class="fas fa-calendar-alt text-gray-500 mr-2"></i>
-          <span>1 Mei 2025</span>
+      <article class="blog__card bg-white shadow-lg rounded-lg overflow-hidden scroll-animate">
+        <div class="blog__image relative">
+          <img src="https://giliwanders.com/fotoberita/landscape-tropical-vacation-palm-summer.jpg" alt="Tropical vacation landscape with palm trees and blue sky" class="blog__img w-full h-48 object-cover" />
         </div>
-        <h2 class="blog__title text-xl font-bold">Kenalan dengan GetByGili: Solusi Nyaman dan Cepat untuk Menjelajah Kepulauan Indonesia</h2>
-        <p class="blog__description text-gray-600 mt-2">GetByGili hadir sebagai platform pemesanan speedboat dan fast boat terpercaya yang menghubungkan destinasi-destinasi populer di Indonesia seperti Bali, Gili Trawangan, Nusa Penida, dan Lombok.</p>
-        <div class="blog__footer flex items-center justify-between mt-4">
-          <a href="blog_detail.html" class="border border-blue-600 text-blue-600 px-6 py-2 rounded-full font-medium hover:bg-blue-100 transition duration-300 transform hover:scale-105">View Detail</a>
-          <div class="flex items-center text-gray-500 ml-4">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
-            </svg>
-            <span>1.234</span>
+        <div class="blog__data p-4">
+          <div class="flex items-center text-gray-500 mb-2">
+            <i class="fas fa-calendar-alt text-gray-500 mr-2"></i>
+            <span>1 Mei 2025</span>
+          </div>
+          <h2 class="blog__title text-xl font-bold">Kenalan dengan GetByGili: Solusi Nyaman dan Cepat untuk Menjelajah Kepulauan Indonesia</h2>
+          <p class="blog__description text-gray-600 mt-2">GetByGili hadir sebagai platform pemesanan speedboat dan fast boat terpercaya yang menghubungkan destinasi-destinasi populer di Indonesia seperti Bali, Gili Trawangan, Nusa Penida, dan Lombok.</p>
+          <div class="blog__footer flex items-center justify-between mt-4">
+            <a href="blog_detail.html" class="border border-blue-600 text-blue-600 px-6 py-2 rounded-full font-medium hover:bg-blue-100 transition duration-300 transform hover:scale-105">View Detail</a>
+            <div class="flex items-center text-gray-500 ml-4">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+              </svg>
+              <span>1.234</span>
+            </div>
           </div>
         </div>
-      </div>
-    </article>
+      </article>
+  
+      <!-- Second blog card -->
+      <article class="blog__card bg-white shadow-lg rounded-lg overflow-hidden scroll-animate">
+        <div class="blog__image relative">
+          <img src="https://giliwanders.com/fotoberita/kelingking-beach-nusa-penida-island-bali-indonesia.jpg" alt="Kelingking Beach Nusa Penida Island Bali Indonesia" class="blog__img w-full h-48 object-cover" />
+        </div>
+        <div class="blog__data p-4">
+          <div class="flex items-center text-gray-500 mb-2">
+            <i class="fas fa-calendar-alt text-gray-500 mr-2"></i>
+            <span>4 Mei 2025</span>
+          </div>
+          <h2 class="blog__title text-xl font-bold">GetByGili Kini Layani Langsung dari Sanur ke Gili Trawangan</h2>
+          <p class="blog__description text-gray-600 mt-2">Dalam upaya memperluas jangkauan layanan, GetByGili resmi membuka rute langsung dari Sanur ke Gili Trawangan, tanpa perlu transit di Padang Bai.</p>
+          <div class="blog__footer flex items-center justify-between mt-4">
+            <a href="blog_detail.html" class="border border-blue-600 text-blue-600 px-6 py-2 rounded-full font-medium hover:bg-blue-100 transition duration-300 transform hover:scale-105">View Detail</a>
+            <div class="flex items-center text-gray-500 ml-4">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+              </svg>
+              <span>1.234</span>
+            </div>
+          </div>
+        </div>
+      </article>
 
-    <!-- Second blog card -->
-    <article class="blog__card bg-white shadow-lg rounded-lg overflow-hidden scroll-animate">
-      <div class="blog__image relative">
-        <img src="https://giliwanders.com/fotoberita/kelingking-beach-nusa-penida-island-bali-indonesia.jpg" alt="Kelingking Beach Nusa Penida Island Bali Indonesia" class="blog__img w-full h-48 object-cover max-w-[350px] mx-auto cursor-pointer" />
-      </div>
-      <div class="blog__data p-4">
-        <div class="flex items-center text-gray-500 mb-2">
-          <i class="fas fa-calendar-alt text-gray-500 mr-2"></i>
-          <span>4 Mei 2025</span>
+      <article class="blog__card bg-white shadow-lg rounded-lg overflow-hidden scroll-animate">
+        <div class="blog__image relative">
+          <img src="https://giliwanders.com/fotoberita/kelingking-beach-nusa-penida-island-bali-indonesia.jpg" alt="Kelingking Beach Nusa Penida Island Bali Indonesia" class="blog__img w-full h-48 object-cover" />
         </div>
-        <h2 class="blog__title text-xl font-bold">GetByGili Kini Layani Langsung dari Sanur ke Gili Trawangan</h2>
-        <p class="blog__description text-gray-600 mt-2">Dalam upaya memperluas jangkauan layanan, GetByGili resmi membuka rute langsung dari Sanur ke Gili Trawangan, tanpa perlu transit di Padang Bai.</p>
-        <div class="blog__footer flex items-center justify-between mt-4">
-          <a href="blog_detail.html" class="border border-blue-600 text-blue-600 px-6 py-2 rounded-full font-medium hover:bg-blue-100 transition duration-300 transform hover:scale-105">View Detail</a>
-          <div class="flex items-center text-gray-500 ml-4">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
-            </svg>
-            <span>1.234</span>
+        <div class="blog__data p-4">
+          <div class="flex items-center text-gray-500 mb-2">
+            <i class="fas fa-calendar-alt text-gray-500 mr-2"></i>
+            <span>7 April 2025</span>
+          </div>
+          <h2 class="blog__title text-xl font-bold">Cara Mudah Pesan Tiket Speedboat di GetByGili + Promo Spesial!</h2>
+          <p class="blog__description text-gray-600 mt-2">GetByGili hadir dengan sistem pemesanan online yang cepat dan praktis! Kini booking tiket ke Gili Trawangan, Nusa Penida, atau Lombok bisa dilakukan dalam hitungan menit—dan jangan lewatkan promo kode #getbygilli untuk potongan harga menarik!</p>
+          <div class="blog__footer flex items-center justify-between mt-4">
+            <a href="blog_detail.html" class="border border-blue-600 text-blue-600 px-6 py-2 rounded-full font-medium hover:bg-blue-100 transition duration-300 transform hover:scale-105">View Detail</a>
+            <div class="flex items-center text-gray-500 ml-4">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+              </svg>
+              <span>1.234</span>
+            </div>
           </div>
         </div>
-      </div>
-    </article>
-
-    <article class="blog__card bg-white shadow-lg rounded-lg overflow-hidden scroll-animate">
-      <div class="blog__image relative">
-        <img src="https://giliwanders.com/fotoberita/kelingking-beach-nusa-penida-island-bali-indonesia.jpg" alt="Kelingking Beach Nusa Penida Island Bali Indonesia" class="blog__img w-full h-48 object-cover max-w-[350px] mx-auto cursor-pointer" />
-      </div>
-      <div class="blog__data p-4">
-        <div class="flex items-center text-gray-500 mb-2">
-          <i class="fas fa-calendar-alt text-gray-500 mr-2"></i>
-          <span>7 April 2025</span>
-        </div>
-        <h2 class="blog__title text-xl font-bold">Cara Mudah Pesan Tiket Speedboat di GetByGili + Promo Spesial!</h2>
-        <p class="blog__description text-gray-600 mt-2">GetByGili hadir dengan sistem pemesanan online yang cepat dan praktis! Kini booking tiket ke Gili Trawangan, Nusa Penida, atau Lombok bisa dilakukan dalam hitungan menit—dan jangan lewatkan promo kode #getbygilli untuk potongan harga menarik!</p>
-        <div class="blog__footer flex items-center justify-between mt-4">
-          <a href="blog_detail.html" class="border border-blue-600 text-blue-600 px-6 py-2 rounded-full font-medium hover:bg-blue-100 transition duration-300 transform hover:scale-105">View Detail</a>
-          <div class="flex items-center text-gray-500 ml-4">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
-            </svg>
-            <span>1.234</span>
-          </div>
-        </div>
-      </div>
-    </article>
-  </div>
+      </article>
+    </div>
 </section>  
 
   <!-- Footer -->
