--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       left: 50%;
       transform: translateX(-50%);
       font-size: 1.8rem;
+      /* ========== GLOBAL STYLES ========== */
     }
   </style>
 </head>
@@ -137,7 +138,7 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="port_location.html"
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                   >
                     Port Location
@@ -145,7 +146,7 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="map.html"
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                   >
                     Map & Direction
@@ -153,7 +154,7 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="howtobook.html"
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                   >
                     How To Book
@@ -197,7 +198,7 @@
             </li>
             <li role="none">
               <a
-                href="#"
+                href="contact.html"
                 class="block px-3 py-2 rounded hover:text-sky-600 focus:outline-none focus:ring-2 focus:ring-sky-600 transition"
                 role="menuitem"
                 >Contact Us</a
@@ -209,7 +210,7 @@
     </div>
   </header>
 
-    <!-- HERO FULLSCREEN VIDEO -->
+  <!-- HERO FULLSCREEN VIDEO -->
 <section class="relative w-full h-screen overflow-hidden scroll-animate">
   <!-- YouTube Video Background -->
   <div class="absolute inset-0 w-full h-full -z-10 overflow-hidden">
@@ -434,12 +435,9 @@
 
     <!-- Gambar Kanan -->
     <div class="relative flex-shrink-0 w-full max-w-sm md:w-64 lg:w-72">
-      <img alt="Blue rounded background" 
-           class="absolute -top-4 -left-4 rounded-3xl w-full h-auto shadow-xl animate__animated animate__fadeInRight" 
-           src="https://storage.googleapis.com/a1aa/image/26368e7b-589d-4b89-d57a-aec2ac847c0e.jpg"/>
       <img alt="Island Travel Poster" 
            class="relative rounded-3xl shadow-2xl w-full h-auto animate__animated animate__fadeIn animate__delay-1s" 
-           src="https://storage.googleapis.com/a1aa/image/4cb53dc9-1edf-46e7-bd95-fc64fb2c99f9.jpg"/>
+           src="assets/img/giliislandus.jpg"/>
     </div>
 
   </div>
@@ -620,12 +618,9 @@
     </div>
     
     <div class="relative flex-shrink-0 w-full max-w-sm md:w-64 lg:w-72 scroll-animate">
-      <img alt="Blue rounded rectangle background card with a slight shadow" 
-           class="absolute -top-4 -left-4 rounded-3xl w-full h-auto shadow-xl animate__animated animate__fadeInRight" 
-           src="https://storage.googleapis.com/a1aa/image/26368e7b-589d-4b89-d57a-aec2ac847c0e.jpg"/>
       <img alt="Island Travel poster with tropical island and signposts, rounded corners" 
            class="relative rounded-3xl shadow-2xl w-full h-auto animate__animated animate__fadeIn animate__delay-1s" 
-           src="https://storage.googleapis.com/a1aa/image/4cb53dc9-1edf-46e7-bd95-fc64fb2c99f9.jpg"/>
+           src="assets/img/why.jpg"/>
     </div>
   </div>
 </section>
@@ -992,7 +987,7 @@
           SOCIAL
         </h4>
         <ul class="space-y-2 text-gray-600 text-sm">
-          <li><a class="hover:text-sky-600 transition" href="#">Instagram</a></li>
+          <li ><a class="hover:text-sky-600 transition" href="#">Instagram</a></li>
           <li><a class="hover:text-sky-600 transition" href="#">Facebook</a></li>
           <li><a class="hover:text-sky-600 transition" href="#">Youtube</a></li>
         </ul>
